# checkit

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  checkit.spec  checkit.spec.in  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  README
man/: Makefile.am  Makefile.in  checkit.1  checkit.1.in
src/: Makefile.am  Makefile.in  checkit.c  checkit.h  checkit_attr.c  checkit_cli.c  crc64.c  crc64.h  fsmagic.h  ntfs_attr.c  strarray.c  strarray.h  vfat_attr.c
